--- a/src/main/resources/bennder.properties
+++ b/src/main/resources/bennder.properties
@@ -2,7 +2,8 @@
 # Servidor Desarrollo open cloud
 #URL_SERVIDOR=http://170.239.84.50:8080/BennderB2BServices/services/
 # Servidor Desarrollo AWS
-#URL_SERVIDOR=http://ec2-54-245-30-229.us-west-2.compute.amazonaws.com:8080/BennderB2BServices/services/
 #URL_SERVIDOR = http://54.245.54.42:8080/BennderB2BServices/services/
+# Servidor Produccion AWS
+URL_SERVIDOR = http://ec2-34-209-72-68.us-west-2.compute.amazonaws.com:8080/BennderB2BServices/services/
 # Servidor Desarrollo
-URL_SERVIDOR=http://localhost:8080/BennderB2BServices/services/
+#URL_SERVIDOR=http://localhost:8080/BennderB2BServices/services/
