Escalamiento de imágenes

--- a/src/main/resources/bennder.properties
+++ b/src/main/resources/bennder.properties
@@ -1,6 +1,6 @@
 #dns
-#dns = http://b2b.bennder.club/
-dns = http://54.245.54.42:8080/
+dns = http://b2b.bennder.club/
+#dns = http://54.245.54.42:8080/
 #dns = localhost:8080
 # Servidor Desarrollo AWS
 #URL_SERVIDOR = http://54.245.54.42:8080/BennderB2BServices/services/
