--- a/src/main/resources/bennder.properties
+++ b/src/main/resources/bennder.properties
@@ -6,8 +6,8 @@ dns = http://b2b.bennder.club/
 #desarrollo
 #URL_SERVIDOR = http://54.245.54.42:8080/BennderB2BServices/services/
 #prod
-#URL_SERVIDOR = http://34.211.0.198:8080/BennderB2BServices/services/
+URL_SERVIDOR = http://34.211.0.198:8080/BennderB2BServices/services/
 # Servidor Produccion AWS
 #URL_SERVIDOR = http://ec2-34-209-72-68.us-west-2.compute.amazonaws.com:8080/BennderB2BServices/services/
 # Servidor Local host
-URL_SERVIDOR=http://localhost:8080/BennderB2BServices/services/
+#URL_SERVIDOR=http://localhost:8080/BennderB2BServices/services/
