--- a/src/main/resources/bennder.properties
+++ b/src/main/resources/bennder.properties
@@ -1,5 +1,5 @@
 #dns
-dns = http://b2b.bennder.club/
+dns = http://b2b.bennder.club:8080/
 #dns = http://54.245.54.42:8080/
 #dns = localhost:8080
 # Servidor Desarrollo AWS
